E1-1220 cm test cropping issue fix
E1-1220 cm test cropping issue fix

--- a/ui.frontend/src/main/webpack/etisalat/dynamic-modules/context-navigation/context-navigation.scss
+++ b/ui.frontend/src/main/webpack/etisalat/dynamic-modules/context-navigation/context-navigation.scss
@@ -865,8 +865,16 @@
         margin-bottom: toRem(16);
 
         @include respond-to-max($tablet) {
-          height: toRem(24);
+          height: toRem(27.2);
           margin-bottom: toRem(24);
+        }
+
+        @include respond-to-max($phone) {
+          height: toRem(43);
+        }
+
+        @media only screen and (min-width: 375px) and (max-width: 915px) and (orientation: landscape) {
+          height: toRem(36);
         }
 
         p {
